# aiva

./: .gitignore  Cargo.toml  Makefile  README.md  custom-lima.yml
aiva-cli/: Cargo.toml
aiva-cli/src/: main.rs  output.rs  utils.rs
aiva-cli/src/commands/: config.rs  data.rs  delete.rs  deploy.rs  init.rs  logs.rs  mod.rs  run.rs  start.rs  status.rs  stop.rs
aiva-core/: Cargo.toml
aiva-core/src/: config.rs  error.rs  lib.rs  logging.rs  monitoring.rs  templates.rs  types.rs  vm.rs
aiva-network/: Cargo.toml
aiva-network/src/: bridge.rs  iptables.rs  lib.rs  tap.rs
aiva-platform/: Cargo.toml
aiva-platform/src/: command_pool.rs  firecracker.rs  firecracker_vm.rs  lib.rs  linux.rs  macos.rs  vsock_executor.rs  windows.rs
aiva-platform/src/tests/: command_pool_tests.rs  mod.rs  platform_tests.rs  vsock_executor_tests.rs
aiva-platform/templates/: windows_create_vm.sh  windows_delete_vm.sh  windows_get_metrics.sh  windows_setup_firecracker.sh  windows_start_vm.sh  windows_stop_vm.sh
aiva-platform/tests/: README.md  integration_tests.rs
aiva-security/: Cargo.toml
aiva-security/src/: isolation.rs  lib.rs  policy.rs
aiva-storage/: Cargo.toml
aiva-storage/src/: image.rs  lib.rs  volume.rs
specs/: 0001-spec.md  0002-design.md
