[package]
name = "aiva-platform"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Platform abstraction layer for AIVA"

[dependencies]
aiva-core = { path = "../aiva-core" }
aiva-network = { path = "../aiva-network" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
which = "6.0"
nix = { version = "0.29", features = ["process", "signal"] }
reqwest = { workspace = true }
hyper = { version = "1.0", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1"] }
http-body-util = "0.1"
tokio-stream = "0.1"
tower = "0.5"
once_cell = "1.20"
askama = "0.12"

[target.'cfg(target_os = "linux")'.dependencies]
kvm-ioctls = "0.17"
vmm-sys-util = "0.12"

[target.'cfg(target_os = "macos")'.dependencies]
# Lima VM integration dependencies

[target.'cfg(target_os = "windows")'.dependencies]
# WSL2 integration dependencies

[dev-dependencies]
uuid = { workspace = true }
chrono = { workspace = true }
