[package]
name = "aiva-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Storage management for AIVA microVMs"

[dependencies]
aiva-core = { path = "../aiva-core" }

tokio = { workspace = true, features = ["fs", "process"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
tempfile = "3.13"
tar = "0.4"
flate2 = "1.0"
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
